<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecyclerFragment">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_previous"
        android:layout_width="@dimen/btn_width"
        android:layout_height="50dp"
        android:enabled="false"
        android:text="@string/previous"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/sixteen_step"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_next"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="right"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/sixteen_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/recycl_error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/eight_step"
        android:layout_marginLeft="@dimen/eight_step"
        android:layout_marginTop="@dimen/eight_step"
        android:layout_marginEnd="@dimen/eight_step"
        android:layout_marginRight="@dimen/eight_step"
        android:layout_marginBottom="@dimen/eight_step"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10">

        <ProgressBar
            android:id="@+id/recycle_error_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/progress_bar_len"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:indeterminate="true"

            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recycl_error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/error_posts_not_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/recycl_error_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/retry"
            android:textColor="@android:color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_previous"
        tools:layout_editor_absoluteX="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>